# django-protect

./: .gitignore  README.md  django_protect.py  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
django_protect_test/: asgi.py  django_protect_test.py  settings.py  urls.py  wsgi.py
scratchpad/: README.md  django_protect.py
