[project]
name = "django-protect"
version = "0.1"
description = "Global authorization for Django"
authors = [{ name = "Ryan Hiebert" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "Django",
    "django-cmd>=2.6",
]

[project.urls]
homepage = "https://github.com/ryanhiebert/django-protect"
repository = "https://github.com/ryanhiebert/django-protect"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "isort>=5.13.2",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "pytest-django>=4.9.0",
    "ruff>=0.8.0",
    "django-cmd>=1.0",
    "django-plugin-database-url>=0.1",
    "dj-database-url>=2.3.0",
]

[tool.isort]
profile = "black"
src_paths = ["django_protect", "django_protect_test"]
known_first_party = ["django_protect", "django_protect_test"]
force_single_line = true

[tool.coverage.run]
branch = true

[tool.django]
settings_module = "django_protect_test.settings"

[tool.pytest.ini_options]
testpaths = ["django_protect_test"]
DJANGO_SETTINGS_MODULE = "django_protect_test.settings"
pythonpath = "."
